--- a/package.json
+++ b/package.json
@@ -39,24 +39,24 @@
     "react"
   ],
   "peerDependencies": {
-    "vite": "^5.0.0 || ^6.0.0"
+    "vite": "^6.0.0 || ^7.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@rollup/plugin-typescript": "^12.1.3",
-    "@types/node": "^20.19.1",
-    "eslint": "^9.17.0",
-    "eslint-config-prettier": "^9.1.0",
-    "globals": "^16.2.0",
-    "prettier": "^3.4.2",
-    "rimraf": "^6.0.1",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.18.2",
-    "vite": "^6.3.5",
-    "vite-plugin-dts": "^4.5.4",
-    "vite-plugin-top-level-await": "^1.5.0",
+    "@eslint/js": "9.30.1",
+    "@rollup/plugin-typescript": "12.1.4",
+    "@types/node": "20.19.1",
+    "eslint": "9.30.0",
+    "eslint-config-prettier": "10.1.5",
+    "globals": "16.3.0",
+    "prettier": "3.6.2",
+    "rimraf": "6.0.1",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.35.1",
+    "vite": "^6.0.0",
+    "vite-plugin-dts": "4.5.4",
+    "vite-plugin-top-level-await": "1.5.0",
     "vite-plugin-wasm": "^3.4.1",
-    "vitest": "^3.2.4"
+    "vitest": "3.2.4"
   },
   "repository": {
     "type": "git",
@@ -66,6 +66,6 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "zod": "^3.25.67"
+    "zod": "3.25.71"
   }
 }
