--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/parser/lib.rs"
 
 [dependencies]
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
+js-sys = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 serde_json = "1.0"
