--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
       "import": "./dist/plugin/index.js"
     }
   },
-  "files": [
-    "dist",
-    "pkg"
-  ],
+  "files": ["dist", "pkg"],
   "scripts": {
     "build": "npm run build:wasm && npm run build:js",
     "build:wasm": "wasm-pack build --target web .",
@@ -28,34 +25,25 @@
     "check": "tsc --noEmit",
     "test": "vitest run"
   },
-  "keywords": [
-    "vite",
-    "plugin",
-    "norg",
-    "neorg",
-    "wasm",
-    "rust",
-    "svelte",
-    "react"
-  ],
+  "keywords": ["vite", "plugin", "norg", "neorg", "wasm", "rust", "svelte", "react"],
   "peerDependencies": {
-    "vite": "^6.0.0 || ^7.0.0"
+    "vite": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/js": "9.30.1",
     "@rollup/plugin-typescript": "12.1.4",
     "@types/node": "20.19.1",
-    "eslint": "9.30.0",
+    "eslint": "9.30.1",
     "eslint-config-prettier": "10.1.5",
     "globals": "16.3.0",
     "prettier": "3.6.2",
     "rimraf": "6.0.1",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.35.1",
-    "vite": "^6.0.0",
+    "typescript-eslint": "8.36.0",
+    "vite": "7.0.4",
     "vite-plugin-dts": "4.5.4",
     "vite-plugin-top-level-await": "1.5.0",
-    "vite-plugin-wasm": "^3.4.1",
+    "vite-plugin-wasm": "3.5.0",
     "vitest": "3.2.4"
   },
   "repository": {
@@ -66,6 +54,6 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "zod": "3.25.71"
+    "zod": "4.0.2"
   }
 }
