--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Setup Nix dev environment
         uses: nicknovitski/nix-develop@v1
 
+      - name: Clear npm cache
+        run: npm cache clean --force
+        
       - name: Install dependencies
         run: npm ci
 
