--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "license": "MIT",
   "homepage": "https://github.com/bottd/vite-plugin-norg#README",
   "name": "vite-plugin-norg",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "type": "module",
-  "description": "A Vite plugin for processing Norg files with WASM-compiled Rust parser",
+  "description": "A Vite plugin for rendering Norg files",
   "main": "dist/plugin/index.js",
   "types": "dist/plugin/index.d.ts",
   "exports": {
@@ -14,10 +14,7 @@
       "import": "./dist/plugin/index.js"
     }
   },
-  "files": [
-    "dist",
-    "pkg"
-  ],
+  "files": ["dist", "pkg"],
   "scripts": {
     "build": "npm run build:wasm && npm run build:js",
     "build:wasm": "wasm-pack build --target web .",
@@ -28,23 +25,25 @@
     "check": "tsc --noEmit",
     "test": "vitest run"
   },
-  "keywords": [
-    "vite",
-    "plugin",
-    "norg",
-    "neorg",
-    "wasm",
-    "rust",
-    "svelte",
-    "react"
-  ],
+  "keywords": ["vite", "plugin", "norg", "neorg", "wasm", "rust", "svelte", "react"],
   "peerDependencies": {
     "vite": "^7.0.0"
+  },
+  "peerDependenciesMeta": {
+    "svelte": {
+      "optional": true
+    },
+    "react": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@eslint/js": "9.30.1",
     "@rollup/plugin-typescript": "12.1.4",
     "@types/node": "20.19.1",
+    "@types/react": "19.1.8",
+    "react": "19.1.0",
+    "svelte": "5.35.6",
     "eslint": "9.30.1",
     "eslint-config-prettier": "10.1.5",
     "globals": "16.3.0",
@@ -66,6 +65,6 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "zod": "4.0.2"
+    "zod": "4.0.5"
   }
 }
