--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vite-plugin-norg-parser"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 authors = ["drake bott"]
 description = "wasm parser for vite-plugin-norg"
@@ -16,13 +16,13 @@ path = "src/parser/lib.rs"
 
 [dependencies]
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
+js-sys = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 serde_json = "1.0"
 htmlescape = "0.3"
 rust-norg = { git = "https://github.com/nvim-neorg/rust-norg" }
 textwrap = "0.16.1"
-js-sys = "0.3"
 
 [dependencies.web-sys]
 version = "0.3"
@@ -39,7 +39,7 @@ optional = true
 [dev-dependencies]
 insta = { version = "1.39.0", features = ["yaml"] }
 proptest = "1.4.0"
-itertools = "0.13.0"
+rstest = "0.18.2"
 
 [profile.release]
 opt-level = "s"
