--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "license": "MIT",
   "homepage": "https://github.com/bottd/vite-plugin-norg#README",
   "name": "vite-plugin-norg",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "type": "module",
-  "description": "A Vite plugin for processing Norg files with WASM-compiled Rust parser",
+  "description": "A Vite plugin for rendering Norg files",
   "main": "dist/plugin/index.js",
   "types": "dist/plugin/index.d.ts",
   "exports": {
@@ -14,10 +14,7 @@
       "import": "./dist/plugin/index.js"
     }
   },
-  "files": [
-    "dist",
-    "pkg"
-  ],
+  "files": ["dist", "pkg"],
   "scripts": {
     "build": "npm run build:wasm && npm run build:js",
     "build:wasm": "wasm-pack build --target web .",
@@ -28,35 +25,37 @@
     "check": "tsc --noEmit",
     "test": "vitest run"
   },
-  "keywords": [
-    "vite",
-    "plugin",
-    "norg",
-    "neorg",
-    "wasm",
-    "rust",
-    "svelte",
-    "react"
-  ],
+  "keywords": ["vite", "plugin", "norg", "neorg", "wasm", "rust", "svelte", "react"],
   "peerDependencies": {
-    "vite": "^5.0.0 || ^6.0.0"
+    "vite": "^7.0.0"
+  },
+  "peerDependenciesMeta": {
+    "svelte": {
+      "optional": true
+    },
+    "react": {
+      "optional": true
+    }
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@rollup/plugin-typescript": "^12.1.3",
-    "@types/node": "^20.19.1",
-    "eslint": "^9.17.0",
-    "eslint-config-prettier": "^9.1.0",
-    "globals": "^16.2.0",
-    "prettier": "^3.4.2",
-    "rimraf": "^6.0.1",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.18.2",
-    "vite": "^6.3.5",
-    "vite-plugin-dts": "^4.5.4",
-    "vite-plugin-top-level-await": "^1.5.0",
-    "vite-plugin-wasm": "^3.4.1",
-    "vitest": "^3.2.4"
+    "@eslint/js": "9.30.1",
+    "@rollup/plugin-typescript": "12.1.4",
+    "@types/node": "20.19.1",
+    "@types/react": "19.1.8",
+    "react": "19.1.0",
+    "svelte": "5.35.6",
+    "eslint": "9.30.1",
+    "eslint-config-prettier": "10.1.5",
+    "globals": "16.3.0",
+    "prettier": "3.6.2",
+    "rimraf": "6.0.1",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.36.0",
+    "vite": "7.0.4",
+    "vite-plugin-dts": "4.5.4",
+    "vite-plugin-top-level-await": "1.5.0",
+    "vite-plugin-wasm": "3.5.0",
+    "vitest": "3.2.4"
   },
   "repository": {
     "type": "git",
@@ -66,6 +65,6 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "zod": "^3.25.67"
+    "zod": "4.0.5"
   }
 }
