--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,4 +55,4 @@ opt-level = "z"
 panic = "abort"
 
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = ["-Oz", "--enable-mutable-globals", "--enable-bulk-memory-opt"]
+wasm-opt = ["-Oz", "--enable-mutable-globals", "--enable-bulk-memory"]
