--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "homepage": "https://github.com/bottd/vite-plugin-norg#README",
   "name": "vite-plugin-norg",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "description": "A Vite plugin for rendering Norg files",
   "main": "dist/plugin/index.js",
@@ -54,13 +54,13 @@
     "@rollup/plugin-typescript": "12.1.4",
     "@types/node": "20.19.1",
     "@types/react": "19.1.8",
-    "react": "19.1.0",
-    "svelte": "5.35.6",
     "eslint": "9.30.1",
     "eslint-config-prettier": "10.1.5",
     "globals": "16.3.0",
     "prettier": "3.6.2",
+    "react": "19.1.0",
     "rimraf": "6.0.1",
+    "svelte": "5.35.6",
     "typescript": "5.8.3",
     "typescript-eslint": "8.36.0",
     "vite": "7.0.4",
@@ -77,6 +77,7 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "shiki": "^3.8.0",
     "zod": "4.0.5"
   }
 }
