--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "homepage": "https://github.com/bottd/vite-plugin-norg#README",
   "name": "vite-plugin-norg",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "type": "module",
   "description": "A Vite plugin for rendering Norg files",
   "main": "dist/plugin/index.js",
@@ -50,22 +50,23 @@
     }
   },
   "devDependencies": {
-    "@eslint/js": "9.30.1",
+    "@eslint/js": "^9.33.0",
     "@rollup/plugin-typescript": "12.1.4",
-    "@types/node": "20.19.1",
-    "@types/react": "19.1.8",
-    "eslint": "9.30.1",
-    "eslint-config-prettier": "10.1.5",
+    "@types/node": "^22.17.2",
+    "@types/react": "^19.1.10",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
     "globals": "16.3.0",
+    "jiti": "^2.5.1",
     "prettier": "3.6.2",
-    "react": "19.1.0",
+    "react": "^19.1.1",
     "rimraf": "6.0.1",
-    "svelte": "5.35.6",
-    "typescript": "5.8.3",
-    "typescript-eslint": "8.36.0",
-    "vite": "7.0.4",
+    "svelte": "^5.38.1",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.39.1",
+    "vite": "^7.1.2",
     "vite-plugin-dts": "4.5.4",
-    "vite-plugin-top-level-await": "1.5.0",
+    "vite-plugin-top-level-await": "^1.6.0",
     "vite-plugin-wasm": "3.5.0",
     "vitest": "3.2.4"
   },
@@ -77,7 +78,7 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "shiki": "^3.8.0",
-    "zod": "4.0.5"
+    "shiki": "^3.9.2",
+    "zod": "^4.0.17"
   }
 }
