--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "homepage": "https://github.com/bottd/vite-plugin-norg#README",
   "name": "vite-plugin-norg",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "type": "module",
   "description": "A Vite plugin for rendering Norg files",
   "main": "dist/plugin/index.js",
@@ -14,10 +14,7 @@
       "import": "./dist/plugin/index.js"
     }
   },
-  "files": [
-    "dist",
-    "pkg"
-  ],
+  "files": ["dist", "pkg"],
   "scripts": {
     "build": "npm run build:wasm && npm run build:js",
     "build:wasm": "wasm-pack build --target web .",
@@ -28,16 +25,7 @@
     "check": "tsc --noEmit",
     "test": "vitest run"
   },
-  "keywords": [
-    "vite",
-    "plugin",
-    "norg",
-    "neorg",
-    "wasm",
-    "rust",
-    "svelte",
-    "react"
-  ],
+  "keywords": ["vite", "plugin", "norg", "neorg", "wasm", "rust", "svelte", "react"],
   "peerDependencies": {
     "vite": "^7.0.0"
   },
@@ -52,7 +40,7 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@rollup/plugin-typescript": "12.1.4",
-    "@types/node": "^22.17.2",
+    "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
@@ -75,7 +63,7 @@
     "url": "git+https://github.com/bottd/vite-plugin-norg.git"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=24.0.0"
   },
   "dependencies": {
     "shiki": "^3.9.2",
