--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
       "import": "./dist/plugin/index.js"
     }
   },
-  "files": ["dist", "pkg"],
+  "files": [
+    "dist",
+    "pkg"
+  ],
   "scripts": {
     "build": "npm run build:wasm && npm run build:js",
     "build:wasm": "wasm-pack build --target web .",
@@ -25,7 +28,16 @@
     "check": "tsc --noEmit",
     "test": "vitest run"
   },
-  "keywords": ["vite", "plugin", "norg", "neorg", "wasm", "rust", "svelte", "react"],
+  "keywords": [
+    "vite",
+    "plugin",
+    "norg",
+    "neorg",
+    "wasm",
+    "rust",
+    "svelte",
+    "react"
+  ],
   "peerDependencies": {
     "vite": "^7.0.0"
   },
@@ -38,21 +50,21 @@
     }
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
+    "@eslint/js": "^9.35.0",
     "@rollup/plugin-typescript": "12.1.4",
-    "@types/node": "^24.3.0",
-    "@types/react": "^19.1.10",
-    "eslint": "^9.33.0",
+    "@types/node": "^24.3.1",
+    "@types/react": "^19.1.12",
+    "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
-    "globals": "16.3.0",
+    "globals": "16.4.0",
     "jiti": "^2.5.1",
     "prettier": "3.6.2",
     "react": "^19.1.1",
     "rimraf": "6.0.1",
-    "svelte": "^5.38.1",
+    "svelte": "^5.38.8",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2",
+    "typescript-eslint": "^8.43.0",
+    "vite": "^7.1.5",
     "vite-plugin-dts": "4.5.4",
     "vite-plugin-top-level-await": "^1.6.0",
     "vite-plugin-wasm": "3.5.0",
@@ -66,7 +78,7 @@
     "node": ">=24.0.0"
   },
   "dependencies": {
-    "shiki": "^3.9.2",
-    "zod": "^4.0.17"
+    "shiki": "^3.12.2",
+    "zod": "^4.1.5"
   }
 }
