--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 serde_json = "1.0"
 htmlescape = "0.3"
-rust-norg = { git = "https://github.com/nvim-neorg/rust-norg" }
+rust-norg = { git = "https://github.com/nvim-neorg/rust-norg", rev = "79673015447b62d021d57b92f80be1454fe5cf83" }
 textwrap = "0.16.1"
 
 [dependencies.web-sys]
