--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "vite-plugin-norg-parser"
-version = "1.1.3"
+version = "1.1.5"
 edition = "2021"
 authors = ["drake bott"]
 description = "wasm parser for vite-plugin-norg"
 license = "MIT"
-repository = "https://github.com/your-org/vite-plugin-norg"
+repository = "https://github.com/bottd/vite-plugin-norg"
 categories = ["norg", "neorg", "wasm", "vite", "parser"]
 
 [lib]
@@ -21,7 +21,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 serde_json = "1.0"
 htmlescape = "0.3"
-rust-norg = { git = "https://github.com/nvim-neorg/rust-norg" }
+rust-norg = { git = "https://github.com/nvim-neorg/rust-norg", rev = "79673015447b62d021d57b92f80be1454fe5cf83" }
 textwrap = "0.16.1"
 
 [dependencies.web-sys]
