--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "homepage": "https://github.com/bottd/vite-plugin-norg#README",
   "name": "vite-plugin-norg",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "type": "module",
   "description": "A Vite plugin for rendering Norg files",
   "main": "dist/plugin/index.js",
@@ -14,10 +14,7 @@
       "import": "./dist/plugin/index.js"
     }
   },
-  "files": [
-    "dist",
-    "pkg"
-  ],
+  "files": ["dist", "pkg"],
   "scripts": {
     "build": "npm run build:wasm && npm run build:js",
     "build:wasm": "wasm-pack build --target web .",
@@ -28,16 +25,7 @@
     "check": "tsc --noEmit",
     "test": "vitest run"
   },
-  "keywords": [
-    "vite",
-    "plugin",
-    "norg",
-    "neorg",
-    "wasm",
-    "rust",
-    "svelte",
-    "react"
-  ],
+  "keywords": ["vite", "plugin", "norg", "neorg", "wasm", "rust", "svelte", "react"],
   "peerDependencies": {
     "vite": "^7.0.0"
   },
@@ -50,25 +38,25 @@
     }
   },
   "devDependencies": {
-    "@eslint/js": "^9.35.0",
-    "@rollup/plugin-typescript": "12.1.4",
-    "@types/node": "^24.3.1",
-    "@types/react": "^19.1.12",
-    "eslint": "^9.35.0",
-    "eslint-config-prettier": "^10.1.8",
-    "globals": "16.4.0",
-    "jiti": "^2.5.1",
+    "@eslint/js": "9.39.1",
+    "@rollup/plugin-typescript": "12.3.0",
+    "@types/node": "24.10.0",
+    "@types/react": "19.2.2",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "10.1.8",
+    "globals": "16.5.0",
+    "jiti": "2.5.1",
     "prettier": "3.6.2",
-    "react": "^19.1.1",
-    "rimraf": "6.0.1",
-    "svelte": "^5.38.8",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.43.0",
-    "vite": "^7.1.5",
+    "react": "19.1.1",
+    "rimraf": "6.1.0",
+    "svelte": "5.43.5",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.46.3",
+    "vite": "7.2.2",
     "vite-plugin-dts": "4.5.4",
-    "vite-plugin-top-level-await": "^1.6.0",
+    "vite-plugin-top-level-await": "1.6.0",
     "vite-plugin-wasm": "3.5.0",
-    "vitest": "3.2.4"
+    "vitest": "4.0.8"
   },
   "repository": {
     "type": "git",
