--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "vite-plugin-norg-parser"
-version = "1.1.6"
+version = "1.2.0"
 edition = "2021"
 authors = ["drake bott"]
 description = "wasm parser for vite-plugin-norg"
 license = "MIT"
 repository = "https://github.com/bottd/vite-plugin-norg"
-categories = ["norg", "neorg", "wasm", "vite", "parser"]
+categories = ["norg", "neorg", "vite", "parser"]
 
 [lib]
 name = "vite_plugin_norg_parser"
@@ -15,26 +15,13 @@ path = "src/parser/lib.rs"
 
 
 [dependencies]
-wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
-js-sys = "0.3"
+napi = { version = "3", features = ["serde-json"] }
+napi-derive = "3"
 serde = { version = "1.0", features = ["derive"] }
-serde-wasm-bindgen = "0.6"
 serde_json = "1.0"
 htmlescape = "0.3"
 rust-norg = { git = "https://github.com/nvim-neorg/rust-norg", rev = "79673015447b62d021d57b92f80be1454fe5cf83" }
 textwrap = "0.16.1"
-
-[dependencies.web-sys]
-version = "0.3"
-optional = true
-
-[features]
-default = ["console_error_panic_hook"]
-console_error_panic_hook = ["dep:console_error_panic_hook"]
-
-[dependencies.console_error_panic_hook]
-version = "0.1"
-optional = true
 
 [dev-dependencies]
 insta = { version = "1.39.0", features = ["yaml"] }
@@ -42,17 +29,7 @@ proptest = "1.4.0"
 rstest = "0.18.2"
 
 [profile.release]
-opt-level = "s"
+opt-level = 3
 lto = true
 codegen-units = 1
-panic = "abort"
 strip = true
-
-[profile.release.package."*"]
-opt-level = "z"
-
-[profile.dev]
-panic = "abort"
-
-[package.metadata.wasm-pack.profile.release]
-wasm-opt = ["-Oz", "--enable-mutable-globals", "--enable-bulk-memory"]
