--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "types": ["vitest/globals"],
     "baseUrl": ".",
     "paths": {
-      "@parser": ["./dist/napi"]
+      "@parser": ["./dist/napi/index"]
     }
   },
   "include": ["src/**/*"],
