--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,11 +31,11 @@ jobs:
       - name: Build plugin
         run: npm run build
 
-      - name: Run cargo checks
-        run: cargo check && cargo clippy
+      - name: Run clippy
+        run: cargo clippy
 
-      - name: Run check and lint
-        run: npm run check && npm run lint
+      - name: Run eslint
+        run: npm run lint
 
       - name: Run Rust tests
         run: cargo test
