--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "homepage": "https://github.com/bottd/vite-plugin-norg#README",
   "name": "vite-plugin-norg",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "type": "module",
   "description": "A Vite plugin for rendering Norg files",
   "main": "dist/plugin/index.js",
@@ -14,12 +14,10 @@
       "import": "./dist/plugin/index.js"
     }
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "build": "npm run build:napi && npm run build:js",
-    "build:napi": "napi build --release --output-dir ./dist/napi",
+    "build:napi": "napi build --release --platform --output-dir ./dist/napi",
     "build:js": "vite build",
     "clean": "rimraf dist target",
     "lint": "eslint .",
@@ -28,17 +26,7 @@
     "pretest": "npm run build:napi",
     "test": "vitest run"
   },
-  "keywords": [
-    "vite",
-    "plugin",
-    "norg",
-    "neorg",
-    "wasm",
-    "napi",
-    "rust",
-    "svelte",
-    "react"
-  ],
+  "keywords": ["vite", "plugin", "norg", "neorg", "wasm", "napi", "rust", "svelte", "react"],
   "peerDependencies": {
     "vite": "^7.0.0"
   },
