--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "homepage": "https://github.com/bottd/vite-plugin-norg#README",
   "name": "vite-plugin-norg",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "type": "module",
   "description": "A Vite plugin for rendering Norg files",
   "main": "dist/plugin/index.js",
@@ -12,11 +12,18 @@
     ".": {
       "types": "./dist/plugin/index.d.ts",
       "import": "./dist/plugin/index.js"
+    },
+    "./svelte": {
+      "types": "./dist/plugin/svelte.d.ts"
+    },
+    "./react": {
+      "types": "./dist/plugin/react.d.ts"
+    },
+    "./html": {
+      "types": "./dist/plugin/html.d.ts"
     }
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "build": "npm run build:napi && npm run build:js",
     "build:napi": "napi build --release --platform --esm --output-dir dist/napi/",
@@ -54,8 +61,8 @@
     "@eslint/js": "9.39.1",
     "@napi-rs/cli": "3.4.1",
     "@rollup/plugin-typescript": "12.3.0",
-    "@types/node": "24.10.0",
-    "@types/react": "19.2.2",
+    "@types/node": "24.10.1",
+    "@types/react": "19.2.6",
     "eslint": "9.39.1",
     "eslint-config-prettier": "10.1.8",
     "globals": "16.5.0",
@@ -63,13 +70,13 @@
     "prettier": "3.6.2",
     "react": "19.2.0",
     "rimraf": "6.1.0",
-    "svelte": "5.43.5",
+    "svelte": "5.43.12",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.46.3",
+    "typescript-eslint": "8.47.0",
     "vite": "7.2.2",
     "vite-plugin-dts": "4.5.4",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "4.0.8"
+    "vitest": "4.0.10"
   },
   "repository": {
     "type": "git",
