--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "homepage": "https://github.com/bottd/vite-plugin-norg#README",
   "name": "vite-plugin-norg",
-  "version": "1.2.7",
+  "version": "1.2.8",
   "type": "module",
   "description": "A Vite plugin for rendering Norg files",
   "main": "dist/plugin/index.js",
@@ -23,9 +23,7 @@
       "types": "./dist/plugin/html.d.ts"
     }
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "build": "npm run build:napi && npm run build:js",
     "build:napi": "napi build --release --platform --esm --output-dir dist/napi/",
@@ -64,28 +62,25 @@
     "@napi-rs/cli": "3.4.1",
     "@rollup/plugin-typescript": "12.3.0",
     "@types/node": "24.10.1",
-    "@types/react": "19.2.6",
+    "@types/react": "19.2.7",
     "eslint": "9.39.1",
     "eslint-config-prettier": "10.1.8",
     "globals": "16.5.0",
     "jiti": "2.6.1",
     "prettier": "3.6.2",
     "react": "19.2.0",
-    "rimraf": "6.1.0",
-    "svelte": "5.43.12",
+    "rimraf": "6.1.2",
+    "svelte": "5.44.0",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.47.0",
-    "vite": "7.2.2",
+    "typescript-eslint": "8.48.0",
+    "vite": "7.2.4",
     "vite-plugin-dts": "4.5.4",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "4.0.10"
+    "vitest": "4.0.14"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bottd/vite-plugin-norg.git"
-  },
-  "engines": {
-    "node": ">=24.0.0"
   },
   "dependencies": {
     "shiki": "^3.12.0",
