--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,25 +23,25 @@ jobs:
         uses: nicknovitski/nix-develop@v1
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Run Nix flake checks
         run: nix flake check
 
       - name: Build plugin
-        run: npm run build
+        run: pnpm build
 
       - name: Run clippy
         run: cargo clippy
 
       - name: Run eslint
-        run: npm run lint
+        run: pnpm lint
 
       - name: Run Rust tests
         run: cargo test
 
       - name: Run JavaScript tests
-        run: npm test
+        run: pnpm test
 
       - name: Create and push git tag
         run: |
