--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "homepage": "https://github.com/bottd/vite-plugin-norg#README",
   "name": "vite-plugin-norg",
-  "version": "1.2.9",
+  "version": "1.2.10",
   "type": "module",
   "description": "A Vite plugin for rendering Norg files",
   "main": "dist/plugin/index.js",
@@ -61,7 +61,7 @@
   },
   "devDependencies": {
     "@eslint/js": "9.39.1",
-    "@napi-rs/cli": "3.4.1",
+    "@napi-rs/cli": "3.5.0",
     "@rollup/plugin-typescript": "12.3.0",
     "@types/node": "24.10.1",
     "@types/react": "19.2.7",
@@ -72,20 +72,20 @@
     "prettier": "3.7.3",
     "react": "19.2.0",
     "rimraf": "6.1.2",
-    "svelte": "5.45.2",
+    "shiki": "3.18.0",
+    "svelte": "5.45.3",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.48.0",
-    "vite": "7.2.4",
+    "typescript-eslint": "8.48.1",
+    "vite": "7.2.6",
     "vite-plugin-dts": "4.5.4",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "4.0.14"
+    "vitest": "4.0.15"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bottd/vite-plugin-norg.git"
   },
   "dependencies": {
-    "shiki": "^3.12.0",
     "zod": "^4.1.0"
   }
 }
