--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "@eslint/js": "9.39.1",
+    "ajv": "8.17.1",
     "@napi-rs/cli": "3.5.0",
     "@rollup/plugin-typescript": "12.3.0",
     "@types/node": "24.10.1",
