--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
       "types": "./dist/plugin/html.d.ts"
     }
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "build": "npm run build:napi && npm run build:js",
     "build:napi": "napi build --release --platform --esm --output-dir dist/napi/",
@@ -69,11 +67,11 @@
     "eslint-config-prettier": "10.1.8",
     "globals": "16.5.0",
     "jiti": "2.6.1",
-    "prettier": "3.7.3",
-    "react": "19.2.0",
+    "prettier": "3.7.4",
+    "react": "19.2.1",
     "rimraf": "6.1.2",
-    "shiki": "3.18.0",
-    "svelte": "5.45.3",
+    "shiki": "3.19.0",
+    "svelte": "5.45.5",
     "typescript": "5.9.3",
     "typescript-eslint": "8.48.1",
     "vite": "7.2.6",
