--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "homepage": "https://github.com/bottd/vite-plugin-norg#README",
   "name": "vite-plugin-norg",
-  "version": "1.2.10",
+  "version": "1.2.11",
   "type": "module",
   "description": "A Vite plugin for rendering Norg files",
   "main": "dist/plugin/index.js",
@@ -23,7 +23,9 @@
       "types": "./dist/plugin/html.d.ts"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "npm run build:napi && npm run build:js",
     "build:napi": "napi build --release --platform --esm --output-dir dist/napi/",
@@ -83,6 +85,6 @@
     "url": "git+https://github.com/bottd/vite-plugin-norg.git"
   },
   "dependencies": {
-    "zod": "^4.1.0"
+    "zod": "^4.1.13"
   }
 }
