feat: add renovate for automated dependency updates

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,7 +16,7 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Check formatting
-        run: nix fmt -- --check
+        run: nix fmt -- --fail-on-change
 
       - name: Run Nix flake checks
         run: nix flake check
