--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Check formatting
-        run: nix fmt -- --check
+        run: nix fmt -- --fail-on-change
 
       - name: Run Nix flake checks
         run: nix flake check
