--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "homepage": "https://github.com/bottd/vite-plugin-norg#README",
   "name": "vite-plugin-norg",
-  "version": "1.2.11",
+  "version": "1.2.12",
   "type": "module",
   "description": "A Vite plugin for rendering Norg files",
   "main": "dist/plugin/index.js",
@@ -14,13 +14,13 @@
       "import": "./dist/plugin/index.js"
     },
     "./svelte": {
-      "types": "./dist/plugin/svelte.d.ts"
+      "types": "./dist/plugin/generators/svelte.d.ts"
     },
     "./react": {
-      "types": "./dist/plugin/react.d.ts"
+      "types": "./dist/plugin/generators/react.d.ts"
     },
     "./html": {
-      "types": "./dist/plugin/html.d.ts"
+      "types": "./dist/plugin/generators/html.d.ts"
     }
   },
   "files": [
