--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
   },
   "devDependencies": {
     "@eslint/js": "9.39.1",
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/exec": "6.0.3",
+    "@semantic-release/git": "10.0.1",
     "ajv": "8.17.1",
     "@napi-rs/cli": "3.5.0",
     "@rollup/plugin-typescript": "12.3.0",
@@ -76,6 +79,7 @@
     "svelte": "5.45.5",
     "typescript": "5.9.3",
     "typescript-eslint": "8.48.1",
+    "semantic-release": "24.2.4",
     "vite": "7.2.6",
     "vite-plugin-dts": "4.5.4",
     "vite-tsconfig-paths": "5.1.4"
