--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
       "types": "./dist/plugin/generators/html.d.ts"
     }
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "build": "npm run build:napi && npm run build:js",
     "build:napi": "napi build --release --platform --esm --output-dir dist/napi/",
@@ -61,7 +59,8 @@
   "devDependencies": {
     "@eslint/js": "9.39.1",
     "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/exec": "6.0.3",
+    "@semantic-release/exec": "7.1.0",
+    "@semantic-release/npm": "13.1.2",
     "@semantic-release/git": "10.0.1",
     "ajv": "8.17.1",
     "@napi-rs/cli": "3.5.0",
