fix: update renovate config

--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -20,3 +20,5 @@ jobs:
         with:
           configurationFile: renovate.json
           token: ${{ secrets.GH_TOKEN_FOR_UPDATES }}
+        env:
+          RENOVATE_REPOSITORIES: ${{ github.repository }}
