--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended"],
+  "automerge": true,
   "rangeStrategy": "pin",
   "schedule": ["every weekday"],
   "timezone": "America/Chicago",
@@ -13,6 +14,10 @@
     "enabled": true
   },
   "packageRules": [
+    {
+      "matchDepTypes": ["peerDependencies"],
+      "rangeStrategy": "widen"
+    },
     {
       "matchUpdateTypes": ["minor", "patch"],
       "matchManagers": ["npm", "cargo", "nix"],
