--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,12 @@ serde = { version = "=1.0.228", features = ["derive"] }
 serde_json = "=1.0.145"
 htmlescape = "=0.3.1"
 rust-norg = { git = "https://github.com/nvim-neorg/rust-norg", rev = "79673015447b62d021d57b92f80be1454fe5cf83" }
+arborium = { version = "2.3.2", features = ["all-languages"] }
 textwrap = "=0.16.2"
 itertools = "=0.14.0"
+
+[build-dependencies]
+arborium = { version = "2.3.2", features = ["all-languages"] }
 
 [dev-dependencies]
 insta = { version = "=1.44.3", features = ["yaml"] }
