--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "homepage": "https://github.com/bottd/vite-plugin-norg#README",
   "name": "vite-plugin-norg",
-  "version": "1.3.9",
+  "version": "2.0.0",
   "type": "module",
   "description": "A Vite plugin for rendering Norg files",
   "main": "dist/plugin/index.js",
@@ -23,9 +23,7 @@
       "types": "./dist/plugin/generators/html.d.ts"
     }
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "build": "npm run build:napi && npm run build:js",
     "build:napi": "napi build --release --platform --esm --output-dir dist/napi/",
@@ -76,20 +74,17 @@
     "prettier": "3.7.4",
     "react": "19.2.3",
     "rimraf": "6.1.2",
-    "shiki": "3.20.0",
     "svelte": "5.46.0",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.49.0",
+    "typescript-eslint": "8.50.0",
     "semantic-release": "25.0.2",
-    "vite": "7.2.7",
+    "vite": "7.3.0",
     "vite-plugin-dts": "4.5.4",
-    "vite-tsconfig-paths": "5.1.4"
+    "vite-tsconfig-paths": "6.0.3",
+    "zod": "4.2.1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bottd/vite-plugin-norg.git"
-  },
-  "dependencies": {
-    "zod": "4.1.13"
   }
 }
