--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vite-plugin-norg-parser"
-version = "1.3.9"
+version = "2.0.0"
 edition = "2021"
 authors = ["drake bott"]
 description = "wasm parser for vite-plugin-norg"
@@ -21,6 +21,7 @@ serde = { version = "=1.0.228", features = ["derive"] }
 serde_json = "=1.0.145"
 htmlescape = "=0.3.1"
 rust-norg = { git = "https://github.com/nvim-neorg/rust-norg", rev = "79673015447b62d021d57b92f80be1454fe5cf83" }
+arborium = { version = "2.3.2", features = ["all-languages"] }
 textwrap = "=0.16.2"
 itertools = "=0.14.0"
 
